--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -8,7 +8,7 @@
   "customLinks": [
     {
       "id": "1728534585737",
-      "title": "📢 Avisos del Aula Virtual de Discreta I",
+      "title": "📢 Avisos del Aula Virtual",
       "url": "https://famaf.aulavirtual.unc.edu.ar/mod/forum/view.php?id=21169"
     },
     {
