--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -13,7 +13,7 @@
     },
     {
       "id": "1728534585741",
-      "title": "✍ Exámenes viejos de Discreta I",
+      "title": "✍ Exámenes de Matemática Discreta I",
       "url": "https://examenes-viejos.pages.dev/ac/matematica-discreta-1/"
     },
     {
