--- a/src/siteConfig.json
+++ b/src/siteConfig.json
@@ -8,8 +8,8 @@
   "customLinks": [
     {
       "id": "1728534585737",
-      "title": "📢 Avisos del Aula Virtual de Discreta I",
-      "url": "https://famaf.aulavirtual.unc.edu.ar/mod/forum/view.php?id=21169"
+      "title": "✍ Exámenes Viejos de Matemática Discreta I",
+      "url": "https://examenes-viejos.pages.dev/lcc/matematica-discreta-1/"
     },
     {
       "id": "1728534585739",
